# Keep-Screen-WIN

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
res/locales/: en.json  zh_CN.json
src/: app.rs  main.rs
src/app/: darkmode.rs  i18n.rs  mod.rs  state.rs  timer.rs  tray.rs  win_api.rs
xtask/src/: main.rs
