[package]
name = "keep_screen"
version = "1.0.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "libloaderapi",
    "commctrl",
    "basetsd",
    "processthreadsapi",
    "winbase",
    "synchapi",
    "errhandlingapi",
    "handleapi",
] }
crossbeam-channel = "0.5"
trayicon = "0.3.0"
winreg = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"

[build-dependencies]
winres = "0.1"

[workspace]
members = [
    ".",
    "xtask"
]

# Optimize for size in release builds
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link-Time Optimization
codegen-units = 1   # Maximize LTO effectiveness
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols
